fix spacing and spelling issues

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,7 +1,7 @@
 @import "variables.css";
 
 .about-section {
-  height: 90vh;
+  height: 800px;
   padding-left: 20px;
   padding-right: 20px;
   display: flex;
@@ -80,6 +80,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+  padding-bottom: 50px;
 }
 
 .pic-section {
